examples/datalog/31_strings/08_string_trim.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_trim
Knowledge graph 'test_trim' created.
Switched to knowledge graph: test_trim
> .kg use test_trim
Switched to knowledge graph: test_trim
> +words[("  hello  ",), ("world",), (" spaced ",)].
Inserted 3 fact(s) into 'words'.
> trim_result(S, T) :- words(S), T = TRIM(S).
Script error: Parse error: Invalid term: 'TRIM(S)'
